--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/search_7928576.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Pesquisa Binaria</title>
 </head>
 <body>
     <header>
-        <h1>Pesquisa Binaria</h1>
+        <h1>Pesquisa Binária</h1>
     </header>
     <main>
-        <section>
-            <h1>Escolha um numero de 1 a 100:</h1>
-            <h2></h2>
-            <button class="menor">Menor</button>
-            <button class="esse">Esse</button>
-            <button class="maior">Maior</button>
+        <section class="pergunta">
+            <img src="img/search_7928576.png" alt="">
+            <h1>Acerto seu número em até <soan class="destaque">7 tentativas</soan></h1>
+            <h2>Escolha um numero de 1 a 100:</h2>
+            <h3></h3>
+            <section class="botoes">
+                <button class="menor">Menor</button>
+                <button class="esse">Esse</button>
+                <button class="maior">Maior</button>
+            </section>
         </section>
-        <section >
-            <p>Tentativas</p>
+        <section class="resposta">
+            <p></p>
             <ul class="Array"></ul>
         </section>
     </main>
